--- a/andrew_li_django_website/templates/login/home.html
+++ b/andrew_li_django_website/templates/login/home.html
@@ -77,6 +77,9 @@ From bicycles to food to operating system, we have got you covered.
 Here at Red Star, we have dedicated our products to be cheap and reliable.
 <b>100%</b> of our products are sweat shop free we hope to statify your needs.</p>
 
+<p>Currently, due to the lack of funding, our project is still getting build, however, 
+you can read our manifesto in the following <a href="{% url 'secret_passage' %}">link</a>, once you have logged-in </p>
+
 {% endblock text %}
 
 {% block products %}
