--- a/andrew_li_django_website/templates/shop/checkout.html
+++ b/andrew_li_django_website/templates/shop/checkout.html
@@ -49,6 +49,7 @@ h1 {
     <div class="container wow fadeIn">
 
     <!-- Heading -->
+    <1 class="text-center">Coming Soon</h1>
     <h2 class="my-5 h2 text-center">Checkout form</h2>
 
     <!--Grid row-->
