--- a/andrew_li_django_website/templates/shop/shop.html
+++ b/andrew_li_django_website/templates/shop/shop.html
@@ -111,6 +111,7 @@ color: #1c1b1b!important
 {% block text %}
 <main>
     <div class="container">
+    <h1 class="text-center"> Coming Soon </h1>
 
         <!--Navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
@@ -155,63 +156,6 @@ color: #1c1b1b!important
 
         </nav>
         <!--/Navbar-->
-
-        <!--Section: Products v.3-->
-        <section class="text-center mb-4">
-
-            <div class="row wow fadeIn">
-
-                {% for item in object_list %}
-                
-                <div class="col-lg-3 col-md-6 mb-4">
-
-                    <div class="card">
-                        <div class="view overlay">
-                            <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg"
-                                class="card-img-top" alt="">
-                            <a href="{{ item.get_absolute_url }}" class="linker">
-                                <div class="mask"></div>
-                            </a>
-                        </div>
-                        <!--Card image-->
-
-                        <!--Card content-->
-                        <div class="card-body text-center">
-                            <!--Category & Title-->
-                            <a href="" class="grey-text">
-                                <h5>{{ item.get_category_display }}</h5>
-                            </a>
-                            <h5>
-                                <strong>
-                                    <a href="{{ item.get_absolute_url }}" class="dark-grey-text grey_hover">{{ item.title }}
-                                        <span class="badge badge-{{ item.get_label_display }}">NEW</span>
-                                    </a>
-                                </strong>
-                            </h5>
-
-                            <h4 class="font-weight-bold blue-text">
-                                <strong>$
-                                {% if item.discounted_price %}
-                                {{ item.discounted_price }}
-                                {% else %}
-                                {{ item.price }}
-                                {% endif %}
-                                </strong>
-                            </h4>
-
-                        </div>
-                        <!--Card content-->
-
-                    </div>
-                    <!--Card-->
-
-                </div>
-                {% endfor %}
-
-            </div>
-
-        </section>
-        <!--Section: Products v.3-->
 
         <!--Pagination-->
         <nav class="d-flex justify-content-center wow fadeIn">
