--- a/andrew_li_django_website/static/login/css/index.css
+++ b/andrew_li_django_website/static/login/css/index.css
@@ -43,6 +43,18 @@ p {
     border-color: #22e0e5;
     box-shadow: 0 0 5px #40f2f7;
 }
+.link {
+    transition: .2s;
+    -moz-transition: .2s;
+    -webkit-transition: .2s;
+    -o-transition: .2s;
+}
+.link:hover {
+    transition: .2s;
+    -moz-transition: .2s;
+    -webkit-transition: .2s;
+    -o-transition: .2s;
+}
 
 /* badges */
 
@@ -65,7 +77,7 @@ p {
 
 /* footer */
 
-.footer a {
+.footer a, .link:hover {
     text-decoration: none;
 }
 .push {
