--- a/andrew_li_django_website/templates/shop/shop.html
+++ b/andrew_li_django_website/templates/shop/shop.html
@@ -111,7 +111,7 @@ color: #1c1b1b!important
 {% block text %}
 <main>
     <div class="container">
-    <h1 class="text-center"> Coming Soon </h1>
+    <h1 class="text-center"> Coming Soon <br><br></h1>
 
         <!--Navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
